--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
   <h1>📋 My To Do List</h1>
+  <input id="taskInput" type="text" placeholder="할 일 적기">
+  <button onclick="addTask()">추가</button>
+  <ul id="taskList"></ul>
+  <script src="script.js"></script>
 </body>
 </html>
